--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@prisma/adapter-neon": "^6.8.2",
     "@prisma/adapter-pg": "^6.8.2",
     "@prisma/client": "^6.8.2",
+    "@supabase/supabase-js": "^2.50.0",
+    "@vercel/blob": "^1.1.1",
     "geist": "^1.4.2",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
